Update sources #34 #32 #31 #27 #26 #23 #35 #37